--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <title>Nile of Recipes | Home</title>
         </head>
         <body>
-            
+            <h1>Hello world</h1>
             <script src="./assets/js/script.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
