--- a/index.html
+++ b/index.html
@@ -8,9 +8,34 @@
             <link rel="stylesheet" href="./assets/css/style.css">
             <title>Nile of Recipes | Home</title>
         </head>
-        <body>
-            <h1>Hello world</h1>
+        <body class="container-fluid">
+            <!-- Navbar start -->
+            <nav class="navbar navbar-expand-md main-background-color" id="navbar">
+                <a class="navbar-brand main-color font-weight-bold" id="navbar-brand" href="#">Nile of Recipes</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars"></i>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link secondary-color" href="#">Browse<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link secondary-color" href="#">About us</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0" id="navbar-search">
+                    <input class="form-control ml-3 rounded-pill" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn main-color" type="submit"><i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                  </form>
+                </div>
+              </nav>
+            <!-- Navbar ends -->
+
             <script src="./assets/js/script.js"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
         </body>
