[main page UI] adding informative headers

--- a/index.html
+++ b/index.html
@@ -33,7 +33,19 @@
                 </div>
               </nav>
             <!-- Navbar ends -->
+            
+            <!-- quote section -->
+            <section class="quote-section">
+                <h1 class="secondary-color">`People loves to eat are always Best People.`</h1>
+                <h4 class="main-color ml-auto">Julia Child</h4>
+            </section>
+            <!-- quote section -->
 
+            <!--  Responsive image below quote section-->
+            <section>
+                <img src="assets/img/recipe_main.jpg" class="img-fluid w-100 rounded-lg" alt="recipe">
+            </section>
+            <!--  Responsive image below quote section ends-->
             <script src="./assets/js/script.js"></script>
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
