--- a/index.html
+++ b/index.html
@@ -9,7 +9,94 @@
             <title>Nile of Recipes | Home</title>
         </head>
         <body>
-            
+           
+<!--======================================================********============********============********=====================================================-->
+
+            <nav class="navbar navbar-expand-md navbar-light sticky-top">
+                <div class="container mt-4">
+                  <a class="navbar-brand text-uppercase" href="index.html">
+                    Nile of Recipes
+                  </a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                      <li class="nav-item pr-2">
+                        <a class="nav-link" href="index.html">Browse</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link" href="about.html">About Us</a>
+                      </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+            </nav>
+
+<!--======================================================********============********============********=====================================================-->              
+
+            <div class="container d-flex justify-content-center pt-4">
+                <pre><q>People who loves to eat are always Best People       
+                                                <span class="author">JULIA CHILD</span></q></pre>
+            </div>
+            <div class="container greeting">
+                <div class="row">
+                    <div class="col-4">
+                        <h2>Find Healthy And Favourite Foods To Cook</h2>
+                    </div>
+                </div>
+            </div>
+
+<!--======================================================********============********============********=====================================================-->
+
+            <footer class="bg-light text-center text-lg-start">
+              <div class="container p-4">
+                <div class="row">
+                  <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Nile of Recipes</h5>
+
+                    <p>
+                      Here you will find the recipe whatever food you wanna cook!!! We have bunch of food Recipes
+                      from all over the world, the only thing we want from you is just your desire to cook and leave the rest 
+                      is for us!!! 
+                    </p>
+                  </div>
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <ul class="list-unstyled mb-0">
+                      <li>
+                        <a href="#!" class="text-dark">About Us</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="text-dark">Search a recipe</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <ul class="list-unstyled">
+                      <li>
+                        <p>5 kilo, Addis Ababa institute of technology.</p>
+                      </li>
+                      <li>
+                        <p><i class="fa fa-phone pr-3"></i>+251966753360 </p>
+                      </li>
+                      <li>
+                        <p><i class="fa fa-envelope-square pr-3"></i>se.hanan.miftah@gmail.com</p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2021 Nile of Recipes:
+              </div>
+            </footer>
+
+<!--======================================================********============********============********=====================================================-->
+
             <script src="./assets/js/script.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
