[main page UI] recipe of the day section added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <link rel="stylesheet" href="./assets/css/style.css">
             <title>Nile of Recipes | Home</title>
         </head>
-        <body class="container-fluid">
+        <body class="container">
             <!-- Navbar start -->
-            <nav class="navbar navbar-expand-md main-background-color" id="navbar">
+            <nav class="navbar navbar-expand-md tertiary-color-bg" id="navbar">
                 <a class="navbar-brand main-color font-weight-bold" id="navbar-brand" href="#">Nile of Recipes</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
@@ -46,6 +46,111 @@
                 <img src="assets/img/recipe_main.jpg" class="img-fluid w-100 rounded-lg" alt="recipe">
             </section>
             <!--  Responsive image below quote section ends-->
+
+            <!-- recipes of the day section -->
+            <section class="recipes-of-the-day row py-5">
+                <div class="card col-sm-6 col-md-4 col-lg-3 mx-auto p-0" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/80" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Food Name</h5>
+                      <p class="card-text">
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star-half" aria-hidden="true"></i></span>
+                          <span class="p-lg-5 m-lg-4">
+                              100 reviews
+                          </span>
+                          <div>
+                              Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                          </div>
+                      </p>
+                      <a href="#" class="btn main-color-bg tertiary-color">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-sm-6 col-md-4 col-lg-3 mx-auto p-0" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/80" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Food Name</h5>
+                      <p class="card-text">
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star-half" aria-hidden="true"></i></span>
+                          <span class="p-lg-5 m-lg-4">
+                              100 reviews
+                          </span>
+                          <div>
+                              Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                          </div>
+                      </p>
+                      <a href="#" class="btn main-color-bg tertiary-color">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-sm-6 col-md-4 col-lg-3 mx-auto p-0" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/80" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Food Name</h5>
+                      <p class="card-text">
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star-half" aria-hidden="true"></i></span>
+                          <span class="p-lg-5 m-lg-4">
+                              100 reviews
+                          </span>
+                          <div>
+                              Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                          </div>
+                      </p>
+                      <a href="#" class="btn main-color-bg tertiary-color">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-sm-6 col-md-4 col-lg-3 mx-auto p-0" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/80" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Food Name</h5>
+                      <p class="card-text">
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star-half" aria-hidden="true"></i></span>
+                          <span class="p-lg-5 m-lg-4">
+                              100 reviews
+                          </span>
+                          <div>
+                              Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                          </div>
+                      </p>
+                      <a href="#" class="btn main-color-bg tertiary-color">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-sm-6 col-md-4 col-lg-3 mx-auto p-0" style="width: 18rem;">
+                    <img src="https://via.placeholder.com/80" class="card-img-top w-100" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Food Name</h5>
+                      <p class="card-text">
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star" aria-hidden="true"></i></span>
+                          <span><i class="fa fa-star-half" aria-hidden="true"></i></span>
+                          <span class="p-lg-5 m-lg-4">
+                              100 reviews
+                          </span>
+                          <div>
+                              Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                          </div>
+                      </p>
+                      <a href="#" class="btn main-color-bg tertiary-color">Go somewhere</a>
+                    </div>
+                </div>
+            </section>
+            <!-- recipes of the day section ends-->
             <script src="./assets/js/script.js"></script>
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
