--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
                         <a class="nav-link" href="about.html">About Us</a>
                       </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
+                    <form class="form-inline my-2 my-lg-0" id="navbar-search">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn my-2 my-sm-0" type="submit">Search</button>
                     </form>
                   </div>
                 </div>
@@ -58,27 +58,27 @@
                             A keyboard and monitor (optional) are my weapons of choice.
                           </p>
                         </div>
-                        <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+                        <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
                       <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/hanan_miftah.jpg" class="card-img-top" alt="Hanan Miftah">
                         <div class="card-body">
                           <h5 class="card-title">Hanan Miftah</h5>
                           <p class="card-text">
-                              A little text about Ms Hanan Miftah
+                            Cybercrime Investigator, Student, Software engineer
                           </p>
                         </div>
-                        <a href="#" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+                        <a href="https://hanan6927.github.io/PersonalWeb/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
                       <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/avatar.png" class="card-img-top" alt="Abdulfetah Dedgeba">
                         <div class="card-body">
                           <h5 class="card-title">Abdulfetah Dedgeba</h5>
                           <p class="card-text">
-                              A little text about Mr Abdulfetah Dedgeba
+                            Second Year Software Engineering Student - AAiT
                           </p>
                         </div>
-                        <a href="#" class="btn card-btn-background card-btn-color mb-3">Go somewhere</a>
+                        <a href="#" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
                       <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
