==========*****Major changes*****========== -->Adding an icon for the html file -->Adding new images to the images folder so as to use it in the cards created in the html file -->creating cards with card image, card title, text description and button

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <link rel="icon" href="./assets/images/logo.jpg">  
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="./assets/css/style.css">
@@ -51,6 +52,55 @@
                         <h2>Find Healthy And Favourite Foods To Cook</h2>
                     </div>
                 </div>
+            </div>
+
+<!--======================================================********============********============********=====================================================-->
+
+            <div class="container text-uppercase heading mt-5">
+              <h2>Recipes of the day</h2>
+            </div>
+
+<!--======================================================********============********============********=====================================================-->
+
+            <div class="container pt-5">
+              <div class="row">
+                <div class="col-lg-4 col-md-12 w-100">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Pakistani Chicken platter</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/asset-3.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Rissoto</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/asset-4.png" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Maslenitca</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+<!--======================================================********============********============********=====================================================-->
+
+            <div class="container text-uppercase heading mt-5">
+              <h2>Recipes</h2>
             </div>
 
 <!--======================================================********============********============********=====================================================-->
