adding forgotten links

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                             Second Year Software Engineering Student - AAiT
                           </p>
                         </div>
-                        <a href="#" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+                        <a href="https://abdi-edoc-de.github.io/Abdulfeta-Dedgeba-Persnal-website/index.html" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
                       <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
