--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--======================================================********============********============********=====================================================-->
 
             <div class="container text-uppercase heading mt-5">
-              <h2>Recipes of the day</h2>
+              <h3>Recipes of the day</h3>
             </div>
 
 <!--======================================================********============********============********=====================================================-->
@@ -100,12 +100,47 @@
 <!--======================================================********============********============********=====================================================-->
 
             <div class="container text-uppercase heading mt-5">
-              <h2>Recipes</h2>
+              <h3>Recipes</h3>
             </div>
 
 <!--======================================================********============********============********=====================================================-->
 
-            <footer class="bg-light text-center text-lg-start">
+            <div class="container pt-5">
+              <div class="row">
+                <div class="col-lg-4 col-md-12 w-100">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top " src="./assets/images/asset-5.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Pakistani Chicken platter</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/asset-6.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Rissoto</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                  <div class="card w-100 mt-3" style="width: 18rem;">
+                    <img class="card-img-top" src="./assets/images/asset-7.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Maslenitca</h5>
+                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <a href="#" class="btn">See full Recipe</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <footer class="bg-light text-center text-lg-start mt-5">
               <div class="container p-4">
                 <div class="row">
                   <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
