--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
 
             <section class="container py-4">
                 <h3 class="our-title">Developers</h3>
-                <div class="row py-5 mx-auto">
-                    <div class="card col-md-3 mx-auto" style="width: 18rem;">
+                <div class="row mx-auto">
+                    <div class="card col-md-3 mx-auto my-2 my-md-0" style="width: 18rem;">
                         <img src="assets/images/biruk_solomon.jpg" class="card-img-top" alt="Biruk Solomon">
                         <div class="card-body">
                           <h5 class="card-title">Biruk Solomon</h5>
@@ -60,7 +60,7 @@
                         </div>
                         <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
-                      <div class="card col-md-3 mx-auto" style="width: 18rem;">
+                      <div class="card col-md-3 mx-auto my-2 my-md-0" style="width: 18rem;">
                         <img src="assets/images/hanan_miftah.jpg" class="card-img-top" alt="Hanan Miftah">
                         <div class="card-body">
                           <h5 class="card-title">Hanan Miftah</h5>
@@ -71,8 +71,8 @@
                         <a href="https://hanan6927.github.io/PersonalWeb/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
                     </div>
-                    <div class="row py-2 mx-auto">
-                      <div class="card col-md-3 mx-auto mt-0" style="width: 18rem;">
+                    <div class="row my-2 mx-auto">
+                      <div class="card col-md-3 mx-auto my-2 my-md-0" style="width: 18rem;">
                         <img src="assets/images/avatar.png" class="card-img-top" alt="Abdulfetah Dedgeba">
                         <div class="card-body">
                           <h5 class="card-title">Abdulfetah Dedgeba</h5>
@@ -82,7 +82,7 @@
                         </div>
                         <a href="https://abdi-edoc-de.github.io/Abdulfeta-Dedgeba-Persnal-website/index.html" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
-                      <div class="card col-md-3 mx-auto mt-0" style="width: 18rem;">
+                      <div class="card col-md-3 mx-auto my-2 my-md-0" style="width: 18rem;">
                         <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
                         <div class="card-body">
                           <h5 class="card-title">Natneam Mesele</h5>
