--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-            <script src="./assets/js/script.js"></script>
+            <!-- type = module is required to use imports  -->
+            <script type="module" src="./assets/js/script.js"></script>
         </body>
     </html>
