[api] put api data to display

--- a/index.html
+++ b/index.html
@@ -63,37 +63,19 @@
 <!--======================================================********============********============********=====================================================-->
 
             <div class="container pt-5">
-              <div class="row">
-                <div class="col-lg-4 col-md-12 w-100">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Pakistani Chicken platter</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
+              <div class="row" id="content-view">
+                <template id="recipe-random">
+                  <div class="col-lg-4 col-md-6 w-100">
+                    <div class="card w-100 mt-3" style="width: 18rem;">
+                      <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Pakistani Chicken platter</h5>
+                        <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                        <a href="#" class="btn">See full Recipe</a>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top" src="./assets/images/asset-3.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Rissoto</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top" src="./assets/images/asset-4.png" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Maslenitca</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
-                    </div>
-                  </div>
-                </div>
+                </template>
               </div>
             </div>
 
@@ -106,38 +88,19 @@
 <!--======================================================********============********============********=====================================================-->
 
             <div class="container pt-5">
-              <div class="row">
-                <div class="col-lg-4 col-md-12 w-100">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top " src="./assets/images/asset-5.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Pakistani Chicken platter</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
+              <div class="row" id="random-recipes">
+                <template id="recipe-listing">
+                  <div class="col-lg-4 col-md-12 w-100">
+                    <div class="card w-100 mt-3" style="width: 18rem;">
+                      <img class="card-img-top " src="./assets/images/asset-5.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Pakistani Chicken platter</h5>
+                        <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                        <a href="#" class="btn">See full Recipe</a>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top" src="./assets/images/asset-6.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Rissoto</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-12">
-                  <div class="card w-100 mt-3" style="width: 18rem;">
-                    <img class="card-img-top" src="./assets/images/asset-7.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Maslenitca</h5>
-                      <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                      <a href="#" class="btn">See full Recipe</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                </template>
             </div>
 
             <footer class="bg-light text-center text-lg-start mt-5">
