--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                   <div class="col-lg-4 col-md-6 w-100">
                     <div class="card w-100 mt-3" style="width: 18rem;">
                       <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Pakistani Chicken platter</h5>
-                        <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                      <div class="card-body pt-3">
+                        <div class="container-fluid card-content-text">
+                          <h5 class="card-title">Pakistani Chicken platter</h5>
+                          <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
+                        </div>
                         <a href="#" class="btn">See full Recipe</a>
                       </div>
                     </div>
@@ -89,18 +91,7 @@
 
             <div class="container pt-5">
               <div class="row" id="random-recipes">
-                <template id="recipe-listing">
-                  <div class="col-lg-4 col-md-12 w-100">
-                    <div class="card w-100 mt-3" style="width: 18rem;">
-                      <img class="card-img-top " src="./assets/images/asset-5.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Pakistani Chicken platter</h5>
-                        <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
-                        <a href="#" class="btn">See full Recipe</a>
-                      </div>
-                    </div>
-                  </div>
-                </template>
+              </div>
             </div>
 
             <footer class="bg-light text-center text-lg-start mt-5">
