--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <div class="container pt-5">
               <div class="row" id="content-view">
                 <template id="recipe-random">
-                  <div class="col-lg-4 col-md-6 w-100">
+                  <div class="col-lg-4 col-md-6 w-100 template">
                     <div class="card w-100 mt-3" style="width: 18rem;">
                       <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
-                      <div class="card-body pt-3">
-                        <div class="container-fluid card-content-text">
+                      <div class="card-body">
+                        <div class="container-fluid card-content-text pt-3">
                           <h5 class="card-title">Pakistani Chicken platter</h5>
                           <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
                         </div>
