--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <section class="container py-4">
                 <h3 class="our-title">Developers</h3>
                 <div class="row py-5 mx-auto">
-                    <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
+                    <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/biruk_solomon.jpg" class="card-img-top" alt="Biruk Solomon">
                         <div class="card-body">
                           <h5 class="card-title">Biruk Solomon</h5>
@@ -61,7 +61,7 @@
                         </div>
                         <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
-                      <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
+                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
                         <img src="assets/images/hanan_miftah.jpg" class="card-img-top" alt="Hanan Miftah">
                         <div class="card-body">
                           <h5 class="card-title">Hanan Miftah</h5>
@@ -71,7 +71,7 @@
                         </div>
                         <a href="https://hanan6927.github.io/PersonalWeb/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
-                      <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
+                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
 
                         <img src="assets/images/avatar.png" class="card-img-top" alt="Abdulfetah Dedgeba">
                         <div class="card-body">
@@ -82,8 +82,8 @@
                         </div>
                         <a href="https://abdi-edoc-de.github.io/Abdulfeta-Dedgeba-Persnal-website/index.html" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
                       </div>
-
-                      <div class="card col-md-5 mx-auto my-2" style="width: 18rem;">
+                      <div class="w-100 d-none d-lg-block"></div>
+                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
 
                         <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
                         <div class="card-body">
