--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
             <!-- type = module is required to use imports  -->
-            <script type="module" src="./assets/js/script.js"></script>
+            <!-- <script type="module" src="./assets/js/script.js"></script> -->
         </body>
     </html>
