Ingrediant section added

--- a/detail.html
+++ b/detail.html
@@ -90,22 +90,20 @@
                         </p>
         
                       </div>
-
-
-
-
                       <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                         <div class="row " >
                           <div class="col-md-4">
-                                <img class="img-fluid" src="./assets/images/asset-4.png" alt="">
+                                <img class="img-fluid w-100" src="./assets/images/asset-4.png" alt="">
                           </div>
-                          <div class="col-md-8 " style="padding-top: 5%;padding-left:3%; ">
+                          <div class="col-md-8 " >
                                 <h1 style="font-size: 1.75em; font-weight: bold; ">
-                                    Web Development
+                                    Name of Ingrediant
                                 </h1>
                                 <p style="font-size: 1.125em;">
-                                  Web development is the building and maintenance of websites; it’s the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.
+                                  Made up of : about frozen cauliflower florets, thawed, cut into bite-sized pieces <br>
+                                  Amount : 445.54 ml
                                 </p>
+                                
                           </div>
                         </div>
                       </div>
