--- a/detail.html
+++ b/detail.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class=" mt-5 col-md-6">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-12 px-lg-5">
                                <h1> Pakistani Chicken platter</h1>
                                <p class="text-justify" style="font-size: 1em; line-height: 2em;">
                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa expedita optio, ea corrupti excepturi accusamus exercitationem doloribus distinctio inventore consequatur quam necessitatibus voluptatem pariatur laborum, aperiam autem architecto? Explicabo, eaque!
