Changing the footer

--- a/detail.html
+++ b/detail.html
@@ -236,10 +236,7 @@
               <p>5 kilo, Addis Ababa institute of technology.</p>
             </li>
             <li>
-              <p><i class="fa fa-phone pr-3"></i>+251966753360 </p>
-            </li>
-            <li>
-              <p><i class="fa fa-envelope-square pr-3"></i>se.hanan.miftah@gmail.com</p>
+              <a href="https://github.com/Infinidrix/nile-of-recipes"><i class="fa- fa-github"></i> Github repo</a>
             </li>
           </ul>
         </div>
