linking a tags to the respective page

--- a/about.html
+++ b/about.html
@@ -114,10 +114,10 @@
                   <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                     <ul class="list-unstyled mb-0">
                       <li>
-                        <a href="#!" class="text-dark">About Us</a>
+                        <a href="about.html" class="text-dark">About Us</a>
                       </li>
                       <li>
-                        <a href="#!" class="text-dark">Search a recipe</a>
+                        <a href="index.html" class="text-dark">Browse</a>
                       </li>
                     </ul>
                   </div>
@@ -127,7 +127,7 @@
                         <p>5 kilo, Addis Ababa institute of technology.</p>
                       </li>
                       <li>
-                        <a href="https://github.com/Infinidrix/nile-of-recipes"><i class="fa- fa-github"></i> Github repo</a>
+                        <a href="https://github.com/Infinidrix/nile-of-recipes">Github repo</a>
                       </li>
                     </ul>
                   </div>
