--- a/detail.html
+++ b/detail.html
@@ -49,14 +49,14 @@
             <section class="container py-4">
 
               <div class="row round" id="summary-card">
-                <div class="col-md-6 mx-0 px-0">
-                  <img class="img-fluid w-100 h-100 roundImg " style="min-width: 100%;" src="./assets/images/asset-5.jpg" alt="">
+                <div class="mx-0 px-0">
+                  <img class="img-fluid w-100 h-100 roundImg mx-0" style="min-width: 100%;" src="./assets/images/asset-5.jpg" alt="">
                 </div>
-                <div class=" mt-5 col-md-6">
+                <div class=" mt-5">
                   <div class="row">
                     <div class="col-md-12 px-lg-5">
-                      <h1> Pakistani Chicken platter</h1>
-                      <p class="text-justify aboutP" >
+                      <h1 class="text-center"> Pakistani Chicken platter</h1>
+                      <p class="text-center aboutP" >
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa expedita optio, ea corrupti excepturi
                         accusamus exercitationem doloribus distinctio inventore consequatur quam necessitatibus voluptatem
                         pariatur laborum, aperiam autem architecto? Explicabo, eaque!
