--- a/detail.html
+++ b/detail.html
@@ -49,7 +49,7 @@
             <section class="container py-4">
 
               <div class="row round" id="summary-card">
-                <div class="mx-0 px-0">
+                <div class="mx-0 px-0 w-100">
                   <img class="img-fluid w-100 h-100 roundImg mx-0" style="min-width: 100%;" src="./assets/images/asset-5.jpg" alt="">
                 </div>
                 <div class=" mt-5">
